--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,17 +11,13 @@
         <div class="container-fluid">
           <div class="header-wrap">
             <app-search></app-search>
-            <div class="cart-area d-n">
-              <a href="shopping-detail.html">
-                <div class="total">19.22 <span> 2</span> </div> <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              </a>
-            </div>
+            <app-cart-status></app-cart-status>
           </div>
           <div class="account-wrap"></div>
-        </div>
+        </div>  
       </div>
     </header>
-    
+
     <router-outlet></router-outlet>
 
   </div>
